--- a/css/own.css
+++ b/css/own.css
@@ -6,17 +6,68 @@
 
 .vrata{
   width:100%;
-  height: 50%;
+  overflow: hidden;
+}
+
+.stul{
+  width:100%;
 }
 
 .velky-block{
-  background-color:#D20001;
+  background-color:#252525;
+  -webkit-transition: background-color 0.25s ease-out;
+   -moz-transition: background-color 0.25s ease-out;
+   -o-transition: background-color 0.25s ease-out;
+   -ms-transition: background-color 0.25s ease-out;
+   transition: background-color 0.25s ease-out;
+  }
+
+.velky-block:hover{
+  background-color:#E94B4A;
+}
+
+.maly-block{
+  background-color:#E94B4A;
 }
 
 body{
-  background-color: #FFFFF5;
+  background-color: #3F3E46;
 }
 
 .popis{
   padding: 10px;
+  margin: 5px;
+  text-align: center;
+}
+
+.no-right-padding{
+  padding-right: 0;
+}
+
+.padding-top{
+  padding-top: 15px;
+}
+
+.navbar{
+  border-radius: 0px;
+  margin-bottom: 15px;
+}
+
+.navbar:hover{
+  height: 54px;
+  margin-bottom: 13px;
+}
+
+.clicked{
+  height: 200px;
+}
+
+.container { width: 80% !important;  }
+
+@media (max-width: 1600px) {
+  .container {
+      width: 100% !important;
+      margin: 0;
+      padding: 0;
+  }
 }
