--- a/css/own.css
+++ b/css/own.css
@@ -52,15 +52,21 @@ body{
   border-radius: 0px;
   margin-bottom: 15px;
 }
+.maly-nav{
+ height: 52px;
+ margin-bottom: 15px;
+}
 
-.navbar:hover{
+.maly-nav:hover{
   height: 54px;
   margin-bottom: 13px;
 }
 
-.clicked{
+.velky-nav{
   height: 200px;
 }
+
+
 
 .container { width: 80% !important;  }
 
