--- a/css/own.css
+++ b/css/own.css
@@ -11,6 +11,7 @@
 
 .stul{
   width:100%;
+
 }
 
 .velky-block{
@@ -20,14 +21,23 @@
    -o-transition: background-color 0.25s ease-out;
    -ms-transition: background-color 0.25s ease-out;
    transition: background-color 0.25s ease-out;
+   cursor: pointer;
+   color: #E94B4A
   }
+
+.druhy-velky{
+  margin-top: 15px;
+}
+
 
 .velky-block:hover{
   background-color:#E94B4A;
+  color: black;
 }
 
 .maly-block{
   background-color:#E94B4A;
+    color: black;
 }
 
 body{
@@ -66,6 +76,52 @@ body{
   height: 200px;
 }
 
+.modal-vrata-png{
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.modal-vrata{
+  padding: 15px;
+}
+
+
+
+.leva{
+-webkit-transform: rotate(180deg);
+-moz-transform: rotate(180deg);
+-o-transform: rotate(180deg);
+-ms-transform: rotate(180deg);
+transform: rotate(180deg);
+}
+
+.sipka{
+  width: 40%;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sipka:hover{
+  cursor: pointer;
+}
+.gallerie{
+  display: inline-block;
+  position: relative;
+}
+
+span{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.sipka-div{
+  display: flex;
+}
+
+.modal-dialog{
+  width: 60%;
+}
 
 
 .container { width: 80% !important;  }
