--- a/css/own.css
+++ b/css/own.css
@@ -68,6 +68,33 @@ body{
 transition: all 450ms cubic-bezier(0.690, 1.650, 0.035, 0.775);
 }
 
+.navbar-nav {
+    width: 100%;
+    text-align: center;
+}
+
+.navbar-nav>li {
+  float: initial;
+}
+.nav>li {
+    display:inline-block;
+}
+
+.onas{
+  padding: 0 36% 0 36%;
+}
+
+.onas-text{
+  color: #E94B4A;
+  font-size: 16px;
+    padding: auto;
+}
+
+.onas-text-parent{
+  width: 101%;
+  padding: 0 36% 0 36%;
+}
+
 .maly-nav:hover{
   height: 54px;
   margin-bottom: 13px;
@@ -77,6 +104,7 @@ transition: all 450ms cubic-bezier(0.690, 1.650, 0.035, 0.775);
   height: 200px;
   transition: height 1.5s easeOutElastic;
 transition: all 450ms cubic-bezier(0.690, 1.650, 0.035, 0.775);
+word-wrap: break-word;
 }
 
 .modal-vrata-png{
@@ -125,7 +153,6 @@ span{
 .modal-dialog{
   width: 60%;
 }
-
 
 .container { width: 80% !important;  }
 
