--- a/css/own.css
+++ b/css/own.css
@@ -108,8 +108,8 @@ body {
 
 .menu-text {
     position: absolute;
-    left: 5vw;
-    top: 1.35vh;
+    left: 55px;
+    top: 12px;
     font-size: 1.5em;
     color: #E94B4A;
 
@@ -120,7 +120,7 @@ body {
     font-size: 1.4em;
     color: #E94B4A;
     right: 3vw;
-    top: 1.35vh;
+    top: 12px;
 }
 
 .menu-text:hover {
@@ -166,6 +166,9 @@ body {
   color: white;
 }
 
+#nav-textace{
+  padding-top: 5px;
+}
 
 .kontakt-text {
   color: #E94B4A;
@@ -253,10 +256,94 @@ span {
     width: 80% !important;
 }
 
+
+
 @media (max-width: 1600px) {
     .container {
         width: 100% !important;
         margin: 0;
         padding: 0;
+    }
+}
+
+@media (max-width: 1340px) {
+  .velky-nav {
+      height: 300px;
+      transition: height 1.5s easeOutElastic;
+      transition: all 450ms cubic-bezier(0.690, 1.650, 0.035, 0.775);
+      word-wrap: break-word;
+  }
+}
+
+@media (max-width: 991px) {
+  #kontakt-sloupec {
+    text-align: center;
+  }
+
+  iframe{
+    width: 100%;
+  }
+
+  #kontakt-text{
+    text-align: justify;
+  }
+ .maly-bez-margin-padding{
+   margin-left: 0;
+   margin-right: 0;
+   padding-left: 0;
+   padding-right: 0;
+ }
+  .velky-nav{
+    height: 420px;
+  }
+  .onas-text-parent {
+      width: 100%;
+      justify-content: space-between;
+      display: flex;
+      text-align: justify;
+  }
+
+}
+
+@media (max-width: 909px) {
+  .velky-nav{
+    height: 440px;
+  }
+
+  #onas-text{
+    margin-top: 29px;
+  }
+
+}
+
+@media (max-width: 807px) {
+.velky-nav{
+  height: auto;
+}
+
+}
+
+
+  @media (max-width: 770px) {
+
+    .onas-text-parent {
+        width: 100%;
+        padding: 0;
+        margin: 0 0 0 0;
+        justify-content: space-between;
+        display: flex;
+        text-align: justify;
+    }
+    .container-fluid{
+      margin:0;
+      padding: 0;
+    }
+    #nav-textace-div{
+      margin: 0;
+      padding: 0;
+    }
+    #nav-textace{
+      margin: 0;
+      padding: 0;
     }
 }
